js/js.translator/testData/incremental/invalidation/inlineFunSameLibAddFile/lib1/l2.0.kt
class C {
    var x: Int = 42
}

fun bar(c: C) = apply { c.x = 117 }
